--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,9 +2,22 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
+
+    <Button
+        android:id="@+id/ChangeColorButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.485"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.623" />
 
     <TextView
         android:id="@+id/textView"
@@ -12,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="139dp"
-        android:text="Meal Cost:"
+        android:text="Tax:"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -25,8 +38,10 @@
         android:ems="5"
         android:imeOptions="actionDone"
         android:inputType="numberDecimal"
+        android:minHeight="48dp"
         app:layout_constraintBaseline_toBaselineOf="@id/textView"
-        app:layout_constraintStart_toEndOf="@+id/textView" />
+        app:layout_constraintStart_toEndOf="@+id/textView"
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <TextView
         android:id="@+id/textOutput"
@@ -44,8 +59,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="95dp"
-        android:min="0"
         android:max="50"
+        android:min="0"
         android:progress="15"
         app:layout_constraintBottom_toTopOf="@+id/textOutput"
         app:layout_constraintEnd_toEndOf="parent"
@@ -77,13 +92,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:checked="true"
-            android:text="Single" />
+            android:text="Supply" />
 
         <RadioButton
             android:id="@+id/radioParty"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Party" />
+            android:text="Demand" />
     </RadioGroup>
 
     <EditText
@@ -95,8 +110,9 @@
         android:ems="3"
         android:enabled="false"
         android:inputType="number"
+        android:minHeight="48dp"
+        android:text="1"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/radioGroup"
-        android:text="1" />
+        app:layout_constraintStart_toEndOf="@+id/radioGroup" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
